Fix summary row spacing

--- a/src/components/AppSummary/_AppSummary.scss
+++ b/src/components/AppSummary/_AppSummary.scss
@@ -236,7 +236,7 @@
     &-data-row {
       display: flex;
       flex-direction: column;
-      margin-bottom: 30px;
+      margin-bottom: 0;
     }
     &-item {
       width: 100%;
